--- a/roles/dynamicInfoblox/defaults/main.yml
+++ b/roles/dynamicInfoblox/defaults/main.yml
@@ -2,3 +2,5 @@
 ansible_zone: ansible.local
 ansible_subnet: 192.168.1.0/24
 gateway_address: '{{ ansible_subnet | ipaddr("first_usable") }}'
+
+name_server_group: 'ansible_nsgroup'
