--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -39,43 +39,13 @@
   with_items:
     - '{{ gridmasterFqdn.json.result }}'
 
-- name: 'Update the forward zone to reflect its new Grid primary'
-  nios_zone:
-    name: '{{ ansible_zone }}'
-    comment: forward DNS zone
-    state: present
-    provider: '{{ nios_provider }}'
-    grid_primary:
-      - name: '{{ gridmaster_fqdn }}'
+- name: Use a name server group for Grid membership
+  include_tasks: name_server_group.yml
+  when: name_server_group is defined
 
-#Uri module idempotecy preferred
-#- name: 'Create a reverse DNS zone'
-#  include_tasks: dynamic_provider_template.yml
-#  vars:
-#    shell_template: 'create-authoritative-reverse-zone'
-
-- name: 'Create an equivalent reverse DNS zone'
-  uri:
-    url: https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/zone_auth
-    method: POST
-    user: '{{ nios_provider.username }}'
-    password: '{{ nios_provider.password }}'
-    body: "{{ reverse_zone_yml|to_json }}"
-    #201 signifies successful creation
-    #400 signifies existing entry
-    #both should signify a successful WAPI call
-    status_code: 201,400
-    headers:
-      Content-Type: "application/json"
-    validate_certs: no
-  register: reverse_dns_create
-  changed_when: reverse_dns_create.status == 201
-  vars:
-    reverse_zone_yml:
-      fqdn: "{{ ansible_subnet }}"
-      zone_format: "IPV4"
-      grid_primary:
-        - name: '{{ gridmaster_fqdn }}'
+- name: Manually apply Grid membership (do not leverage a name server group)
+  include_tasks: establish_zone_grid_membership.yml
+  when: name_server_group is undefined
 
 #gateway_address computed by ip_addr("first_usable") lookup in defaults/main.yml
 - name: Create a host record for the gateway address
@@ -96,44 +66,7 @@
   when: host_count is defined
 
 #This should be written to handle to handle full directories too
-- block:
-    - name: 'Get a token and url to post the import to'
-      uri:
-        url: 'https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/fileop?_function=uploadinit'
-        method: POST
-        user: '{{ nios_provider.username }}'
-        password: '{{ nios_provider.password }}'
-        #201 signifies successful creation
-        #400 signifies existing entry
-        #both should signify a successful WAPI call
-        #status_code: 201,400
-        headers:
-          Content-Type: "application/json"
-        validate_certs: no
-      register: csv_token_url
-
-    - name: Set the csv_url fact
-      set_fact:
-        csv_url: '{{ csv_token_url.json.url }}'
-
-    - name: Set the csv_token fact
-      set_fact: 
-        csv_token: '{{ csv_token_url.json.token }}'
-
-    - name: Post the file to the retrived url
-      shell: curl -k -u {{ nios_provider.username }}:{{ nios_provider.host }} -H 'content-type:multipart/form-data' "{{ csv_url }}" -F file=@{{ static_csv_file }}
-      vars:
-        static_csv_file: '{{ role_path }}/files/staticRecords/static-test.csv'
-
-    - name: Merge the posted file results
-      shell: curl -k -u {{ nios_provider.username }}:{{ nios_provider.password }} -H 'content-type:application/json' -X POST "https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/fileop?_function=csv_import" -d '{"action":"START","on_error":"CONTINUE","update_method":"MERGE","token":"{{ csv_token }}"}'
-
-        #- name: 'Statically import host records from a csv file'
-        #include_tasks: dynamic_provider_shell_template.yml
-        #vars:
-        #shell_template: 'static-csv-import'
-        #static_csv_file: '{{ role_path }}/files/staticRecords/static-test.csv'
-        #csv_url: '{{ csv_token_url.json.url }}'
-        #csv_token: '{{ csv_token_url.json.token }}'
+- name: Create records by importing a static csv file
+  include_tasks: import_csv.yml
   when: static_csv is defined    
 ...
