--- a/roles/dynamicInfoblox/tasks/name_server_group.yml
+++ b/roles/dynamicInfoblox/tasks/name_server_group.yml
@@ -1,37 +1,4 @@
---- 
-- name: 'Create a test network subnet'
-  nios_network: 
-    network: '{{ ansible_subnet }}'
-    comment: Test network subnet to add host records to
-    state: present
-    provider: '{{ nios_provider }}'
-
-- name: 'Create a forward DNS zone called {{ ansible_zone }}'
-  nios_zone:
-    name: '{{ ansible_zone }}'
-    comment: forward DNS zone
-    state: present
-    provider: '{{ nios_provider }}'
-
-- name: 'Retrieve the Gridmaster fqdn'
-  uri:
-    url: 'https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/ipv4address?ip_address={{ nios_provider.host }}&_return_fields=names&_return_as_object=1'
-    method: GET
-    user: '{{ nios_provider.username }}'
-    password: '{{ nios_provider.password }}'
-    #200 signifies successful retrieval
-    status_code: 200
-    headers:
-      Content-Type: "application/json"
-    validate_certs: no
-  register: gridmasterFqdn
-
-- name: Set the gridmaster_fqdn fact for reuse
-  set_fact:
-    gridmaster_fqdn: '{{ item.names[0] }}'
-  with_items:
-    - '{{ gridmasterFqdn.json.result }}'
-
+---
 - name: 'Create a name server group called {{ name_server_group }}'
   uri:
     url: 'https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/nsgroup'
@@ -41,7 +8,7 @@
     body: '{{ nsgroup_yml|to_json }}'
     #201 signifies successful creation
     status_code: 201,400
-    headers:
+   headers:
       Content-Type: "application/json"
     validate_certs: no
   register: ns_group_create
@@ -50,9 +17,9 @@
     nsgroup_yml:
       name: '{{ name_server_group }}'
       grid_primary:
-        - name: '{{ gridmaster_fqdn }}' 
+	- name: '{{ gridmaster_fqdn }}'
 
-#Had to remove created forward zone to recreate it with ns_group
+#Temporarily remove created forward zone to recreate it with ns_group
 - name: 'Remove the forward DNS zone called {{ ansible_zone }}'
   nios_zone:
     name: '{{ ansible_zone }}'
@@ -94,8 +61,8 @@
     #both should signify a successful WAPI call
     status_code: 201,400
     headers:
-      Content-Type: "application/json"
-    validate_certs: no
+        Content-Type: "application/json"
+      validate_certs: no
   register: reverse_dns_create
   changed_when: reverse_dns_create.status == 201
   vars:
@@ -104,21 +71,4 @@
       zone_format: "IPV4"
       ns_group: "{{ name_server_group }}"
       view: "default"
-
-  #- name: Create a host record for the gateway address
-  #nios_host_record:
-  #  name: 'gateway{{ ansible_subnet | ipaddr('first_usable') | replace(".","_") }}.{{ ansible_zone }}'
-  #  ipv4:
-  #    - address: '{{ gateway_address }}'
-  #  state: present
-  #  provider: '{{ nios_provider }}'
-
-#Generating records this way should be for demo purposes
-#Normal scenario would be to iterate over a dictionary/list of hosts
-#- name: 'Dynamically generate {{ host_count }} host records at next available ip in {{ ansible_subnet }}'
-#  include_tasks: host_record_generation.yml
-#  loop_control:
-#    loop_var: count 
-#  with_sequence: start=1 end={{ host_count }}
-#  when: host_count is defined
 ...
