syntax fix after refactoring

--- a/create_dynamic_name_server_group_records.yml
+++ b/create_dynamic_name_server_group_records.yml
@@ -4,5 +4,5 @@
   connection: local
  
   roles:
-    - { role: dynamicInfoblox, static_csv=True }
+    - { role: dynamicInfoblox }
     - { role: updateService, gridmaster_fqdn: gm.ansible.local, state: started }
