--- a/roles/dynamicInfoblox/tasks/name_server_group.yml
+++ b/roles/dynamicInfoblox/tasks/name_server_group.yml
@@ -7,8 +7,10 @@
     password: '{{ nios_provider.password }}'
     body: '{{ nsgroup_yml|to_json }}'
     #201 signifies successful creation
+    #400 signifies existing entry
+    #both should signify a successful WAPI call
     status_code: 201,400
-   headers:
+    headers:
       Content-Type: "application/json"
     validate_certs: no
   register: ns_group_create
@@ -17,7 +19,7 @@
     nsgroup_yml:
       name: '{{ name_server_group }}'
       grid_primary:
-	- name: '{{ gridmaster_fqdn }}'
+        - name: '{{ gridmaster_fqdn }}'
 
 #Temporarily remove created forward zone to recreate it with ns_group
 - name: 'Remove the forward DNS zone called {{ ansible_zone }}'
@@ -51,7 +53,7 @@
 
 - name: 'Create an equivalent reverse DNS zone'
   uri:
-    url: https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/zone_auth
+    url: 'https://{{ nios_provider.host }}/wapi/{{ wapi_version }}/zone_auth'
     method: POST
     user: '{{ nios_provider.username }}'
     password: '{{ nios_provider.password }}'
@@ -61,8 +63,8 @@
     #both should signify a successful WAPI call
     status_code: 201,400
     headers:
-        Content-Type: "application/json"
-      validate_certs: no
+      Content-Type: "application/json"
+    validate_certs: no
   register: reverse_dns_create
   changed_when: reverse_dns_create.status == 201
   vars:
