--- a/roles/dynamicInfoblox/tasks/main.yml
+++ b/roles/dynamicInfoblox/tasks/main.yml
@@ -65,6 +65,7 @@
   with_sequence: start=1 end={{ host_count }}
   when: host_count is defined
 
+#Work in progress
 #This should be written to handle to handle full directories too
 - name: Create records by importing a static csv file
   include_tasks: import_csv.yml
