--- a/roles/predefineGridmember/tasks/main.yml
+++ b/roles/predefineGridmember/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Predefine a gridmaster member
   include_tasks: dynamic_provider_shell_template.yml
   vars:
-    shell_template: 'provision_v825'
+    shell_template: 'predefine_v825'
 
 - name: Remove the generated cookie file
   file:
