cleaning up README

--- a/create_dynamic_name_server_group_records.yml
+++ b/create_dynamic_name_server_group_records.yml
@@ -5,4 +5,4 @@
  
   roles:
     - { role: dynamicInfoblox }
-    - { role: updateService, gridmaster_fqdn: gm.ansible.local, state: started }
+    - { role: updateService, grid_fqdn: gm.ansible.local, state: started }
