--- a/master_demo_playbook.yml
+++ b/master_demo_playbook.yml
@@ -15,9 +15,10 @@
     - { role: joinGrid, join_grid_host: 192.168.2.3 }
     - { role: joinGrid, join_grid_host: 192.168.1.5 }
     - { role: joinGrid, join_grid_host: 192.168.2.2 }
-    - { role: updateService, state: started, gridmaster_fqdn: m3.redhat.com }
-    - { role: updateService, state: started, gridmaster_fqdn: m5.ansible.local }
-    - { role: updateService, state: started, gridmaster_fqdn: gmc.redhat.com }
+    - { role: updateService, state: started, grid_fqdn: m3.redhat.com }
+    - { role: updateService, state: started, grid_fqdn: m5.ansible.local }
+    - { role: updateService, state: started, grid_fqdn: gmc.redhat.com }
+    #This role has hardcoded information because it is difficult to parameterize long grid_primary and grid_secondary lists
     - { role: updateNameServerGroup }
     #Snapshot role does not require additional appliances
     - { role: snapshotConfiguration }
